JDK-8372451